--- a/src/_www/_default/403.html
+++ b/src/_www/_default/403.html
@@ -1,1 +1,75 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport"content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible"content="ie=edge"><style>@font-face{font-family:'soul';src:url('/fonts/soul-puddle.ttf')format('truetype');font-weight:normal;font-style:normal}html{background-color:#000}html{user-select:none;cursor:default}.container{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);margin:auto;width:600px;display:table-row;font-size:30px;overflow:hidden}.cell{display:table-cell;vertical-align:middle;color:#777;width:150px;text-align:center;font-family:Arial,sans-serif}.cell.wrapper{position:relative;font-family:'soul','Arial Narrow',Arial,sans-serif;padding:0pt;width:300px;height:300px;color:#888;font-size:130px;text-align:center;border-radius:100%;border:6pt solid#444;letter-spacing:0px;text-indent:20px}</style></head><body><div class="container"><span class="cell">ERROR</span><span class="cell wrapper"><span>4</span><span>0</span><span>3</span></span><span class="cell">FOUND</span></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
+/*
+        @font-face {
+            font-family: 'soul';
+            src: url('/fonts/soul-puddle.ttf')format('truetype');
+            font-weight: normal;
+            font-style: normal
+        }
+*/
+        html {
+            background-color: #FFF
+        }
+
+        html {
+            user-select: none;
+            cursor: default
+        }
+
+        .container {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            margin: auto;
+            width: 600px;
+            display: table-row;
+            font-size: 30px;
+            overflow: hidden
+        }
+
+        .cell {
+            display: table-cell;
+            vertical-align: middle;
+            color: #777;
+            width: 150px;
+            text-align: center;
+            font-family: Arial, sans-serif
+        }
+
+        .cell.wrapper {
+            position: relative;
+            font-family: 'soul', Arial, 'Arial Narrow', sans-serif;
+            padding: 0pt;
+            width: 300px;
+            height: 300px;
+            color: #888;
+            font-size: 130px;
+            text-align: center;
+            border-radius: 100%;
+            border: 6pt solid#444;
+            letter-spacing: 0px;
+            text-indent: 0px
+        }
+
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <span class="cell">ERROR</span>
+        <span class="cell wrapper">
+            <span>4</span><span>0</span><span>3</span>
+        </span>
+        <span class="cell">ACCESS</span>
+    </div>
+</body>
+
+</html>
