--- a/src/_www/net.zuojiao.trader/fudi/christmas/main.html
+++ b/src/_www/net.zuojiao.trader/fudi/christmas/main.html
@@ -4,9 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>府邸养生</title>
+
+    <link rel="stylesheet" href="//cdn.staticfile.org/normalize/8.0.1/normalize.min.css" />
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+        }
+
+        #appContainer {
+            position: fixed;
+            left    : 0;
+            top     : 0;
+            width   : 100%;
+            height  : 100%;
+
+            background-size  : auto;
+            background-image : url('./images/background.png');
+            background-repeat: repeat;
+        }
+
+    </style>
+
+    <script>
+        ~(function(window, undefined) {
+            const document = window.document;
+            const location = window.location;
+
+            const queryString = location.search.slice(1);
+            const query = (function() {
+                const query = {};
+                const queryList = decodeURI(location.search || '').match(/[\?\;][^;]+/ig) || [];
+
+                queryList.forEach(function(item) {
+                    const field = (item.slice(1) || '').split('=');
+                    const val = field.slice(1);
+                    query[field[0]] = val.length ? val.join('=') : null;
+                });
+
+                return query;
+            }());
+
+
+            window.utils = {
+                query      : query,
+                queryString: queryString,
+            }
+
+            window.user = {
+                name: utils.query.sir,
+                gender: utils.query.xb.toLowerCase() === 'm' ? '先生' : '女士',
+            }
+
+            window.xPrint = function(str) {
+                document.write('<span>'+str+'</span>');
+            };
+
+            window.getUser = function() {
+                return xPrint(user.name + user.gender);
+            }
+
+        })(top);
+    </script>
 </head>
+
 <body>
-FU DI
+    <div id="appContainer" class="app-container">
+        <div class="layer-bg-wrapper"></div>
+        <script>//getUser()</script>
+    </div>
 </body>
+
 </html>
