--- a/src/_www/net.zuojiao.trader/fudi/christmas/main.html
+++ b/src/_www/net.zuojiao.trader/fudi/christmas/main.html
@@ -26,6 +26,15 @@
             background-repeat: repeat;
         }
 
+        .x-1 {
+            position: absolute;
+            left: 0; top: 0;
+            display: block;
+            width: 323px;
+            height: 416.5px;
+            margin-left: 0px;
+            margin-top: 0px;
+        }
     </style>
 
     <script>
@@ -72,8 +81,7 @@
 
 <body>
     <div id="appContainer" class="app-container">
-        <div class="layer-bg-wrapper"></div>
-        <script>//getUser()</script>
+        <img class="x-1" draggable="false" src="images/FlpjcOal4pjdrLTQ4DLfpVd50-C0.png" />
     </div>
 </body>
 
